Adding in animation

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,9 @@ head
   title Studies
   link(rel="stylesheet", type="text/css", href="css/main.css")
 
+  script(src="vendor/js/three.min.js", type="text/javascript")
 body
   canvas#sketch(width='1000', height='1000')
+  #svg
 
   script(src="js/main.js", type="text/javascript")
