--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,8 @@ head
   link(rel="stylesheet", type="text/css", href="css/main.css")
 
   script(src="vendor/js/three.min.js", type="text/javascript")
+  script(src="vendor/js/matter.min.js", type="text/javascript")
+  script(src="vendor/js/pixi.min.js", type="text/javascript")
 body
   canvas#sketch(width='1900', height='900')
   #svg
