--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ head
   link(rel="stylesheet", type="text/css", href="css/main.css")
 
   script(src="vendor/webkitAudioContextMonkeyPatch.js", type="text/javascript")
+  script(src="vendor/dancer.js", type="text/javascript")
   script(src="vendor/pathseg.js", type="text/javascript")
   script(src="vendor/js/three.min.js", type="text/javascript")
   script(src="vendor/matter.min.js", type="text/javascript")
