--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,7 @@ head
   script(src="vendor/matter.min.js", type="text/javascript")
   script(src="vendor/pixi.min.js", type="text/javascript")
 body
+  canvas#fft
   #sketch
   #svg
 
